# GlobeObserver

./: .gitignore  Makefile  README.md  gee_credentials.json  globe_observer_cli.py  main.py  pyproject.toml
data/: Circunvalacion.kml  Docta.kml  Obra.kml  loma_bajo.kml
data/NReserve/: NaturalReserve_Polygon.dbf  NaturalReserve_Polygon.shp  NaturalReserve_Polygon.shx
globe_observer/: gdrive_service.py
globe_observer/gee/: __init__.py  gee_base_service.py  gee_satellites.py
